Fixing Extra Padding on Copy btn

--- a/extension/content.css
+++ b/extension/content.css
@@ -534,6 +534,6 @@ td.blob-code.blob-code-deletion:before {
 }
 
 /* copy button for gists margin */
-.copy-btn {
+.gist-copy-btn {
 	margin: 0 10px 0 0;
 }
